tests/spec/type_errors/try_wrong_return.soc
// SPEC §3.6 (v0.2): E0329 — the enclosing function's return type must match
// the `?` operand's shape: Option needs an Option return; Result needs a
// Result return with the SAME error type.
//? error: E0329
//? error: `?` on an `Option` requires the enclosing function to return `Option`
//? error: `?` on a `Result[Int, String]` requires the enclosing function to return `Result` with error type `String`
fn opt_in_int(o: Option[Int]) -> Int {
    o? + 1
}
fn res_err_mismatch(r: Result[Int, String]) -> Result[Int, Int] {
    Ok(r?)
}
